Outsourced huge part from Code into Class Renamed projects due to duplicated project name

--- a/AutoShutdown.Gui.WinForms/AutoShutdown.Gui.WinForms.csproj
+++ b/AutoShutdown.Gui.WinForms/AutoShutdown.Gui.WinForms.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AutoShutdown.Classes\AutoShutdown.Classes.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
